--- a/src/styles.css
+++ b/src/styles.css
@@ -1,33 +1,51 @@
+/*APP*/
+.landing-page-video {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+}
+
 /*HEADER*/
 
 .header-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  background-position: center;
+  background-color: rgb(232, 239, 240);
+}
 
-  background-color: cadetblue;
+.title {
+  margin: 10px;
 }
 
 .nav-items {
   display: flex;
   flex-direction: row;
-
-  justify-content: space-around;
-
-  background-color: darkseagreen;
+  align-items: flex-end;
+  justify-content: space-evenly;
+  list-style-type: none;
 }
 
 .nav-items li {
+  margin: 5px;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   margin: 15px;
 }
 
 /* PHOTOS ROUTE */
 
-.photos-container {
-}
-
 .image-list-container {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-around;
   border-style: solid;
   border-color: cadetblue;
 }
@@ -40,8 +58,10 @@
   height: 400px;
   width: 600px;
   border-style: solid;
-
+  border-radius: 4px;
   border-color: cadetblue;
+
+  cursor: zoom-in;
 }
 
 .photo-container-overlay {
@@ -51,18 +71,39 @@
   background-color: darkblue;
 }
 
+.photo-title {
+  font-size: 12px;
+}
+
 /* ENLARGED PHOTO */
 
 .enlarged-photo-container {
-  background-color: darkorange;
+  background-color: rgb(138, 131, 123);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .enlarged-photo {
-  border-style: solid;
   width: 90%;
   height: 90%;
   object-fit: contain;
+  border-radius: 4px;
+  border-color: cadetblue;
+  cursor: zoom-out;
+}
+
+/* VIDEOS ROUTE */
+
+.videos-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-style: solid;
+  border-color: darkcyan;
+}
+
+.drone-video {
+  height: 400px;
+  width: 600px;
 }
