--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,4 @@
 /*APP*/
-.landing-page-video {
-  display: flex;
-  height: 100%;
-  width: 100%;
-  background-size: cover;
-}
 
 /*HEADER*/
 
@@ -12,12 +6,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: 5%;
   background-position: center;
   background-color: rgb(232, 239, 240);
 }
 
 .title {
+  display: flex;
   margin: 10px;
 }
 
@@ -40,6 +35,20 @@
   margin: 15px;
 }
 
+/*HOME ROUTE*/
+
+.home-container {
+  overflow: hidden;
+}
+
+.landing-page-video {
+  display: flex;
+  height: 95%;
+  width: 120%;
+  background-size: cover;
+  overflow: hidden;
+}
+
 /* PHOTOS ROUTE */
 
 .image-list-container {
@@ -50,8 +59,12 @@
   border-color: cadetblue;
 }
 
-.photo-container {
+.photo-container-visible {
   padding: 10px;
+}
+
+.photo-container-hidden {
+  opacity: 0;
 }
 
 .photo-visible {
@@ -66,13 +79,6 @@
 
 .photo-hidden {
   opacity: 0;
-}
-
-.photo-container-overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: darkblue;
 }
 
 .photo-title {
@@ -91,7 +97,7 @@
 .enlarged-photo {
   width: 90%;
   height: 90%;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 4px;
   border-color: cadetblue;
   cursor: zoom-out;
@@ -114,8 +120,36 @@
 
 /*LOADING*/
 
-.loader-conatiner {
-  height: 500px;
-  width: 500px;
-  background-color: darkred;
+.loader-container {
+  height: 50%;
+  width: 50%;
+}
+
+@media (max-width: 600px) {
+  .title {
+    font-size: 1.25rem;
+  }
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .image-list-container {
+    object-fit: contain;
+  }
+
+  .photo-container-visible {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
+
+  .photo-visible {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
 }
