--- a/src/styles.css
+++ b/src/styles.css
@@ -145,21 +145,20 @@ html {
   width: 50%;
 }
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 480px) {
   #root {
     height: 100%;
     width: 100%;
   }
 
   .title {
-    font-size: 0.55rem;
+    font-size: 0.75rem;
   }
   .app-container {
     display: flex;
     flex-direction: column;
     height: 100%;
     width: 100%;
-    object-fit: cover;
   }
 
   .header-container {
@@ -167,12 +166,14 @@ html {
   }
 
   .image-list-container {
+    height: 100%;
+    width: 100%;
     object-fit: contain;
   }
 
   .photo-container-visible {
-    height: 100%;
-    width: 100%;
+    height: 40%;
+    width: 40%;
     object-fit: contain;
   }
 
@@ -186,11 +187,19 @@ html {
     height: 100%;
     width: 100%;
     overflow: hidden;
+    z-index: -1;
   }
 
   .landing-page-video {
-    width: auto;
-    height: 95%;
-    margin: 0 -80px 0 -150px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100vh;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+    margin-left: -270px;
   }
 }
